[package]
name = "lg"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
las = {version = "~0.8", features = ["laz"]}
geo = "0.28"
geo-types = "0.7"
clap = "4"
semver = "1"
wkt = "0.10"
regex = "1.10"
walkdir = "2"
uuid = "1.8"
chrono = "~0.4"
simple_logger = "4.3"
log = "0.4.21"
env_logger = "0.11.3"
